[package]
name = "netvanguard"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
open = "5"
reqwest = { version = "0.11", features = ["json"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
chrono = "0.4.44"
tokio-util = { version = "0.7.18", features = ["rt"] }
once_cell = "1.21.4"
exif = { package = "kamadak-exif", version = "0.5" }
pcap = "2.0"
